# rust-for-odders

./: .gitignore  Cargo.toml  README.md
exercises/ex01/: โจทย์01.md
exercises/ex01a/: main.rs  โจทย์01a.md
exercises/ex01aa/: main.rs  โจทย์01aa.md
exercises/ex01b/: main.rs  โจทย์01b.md
exercises/ex01c/: main.rs  โจทย์01c.md
exercises/ex01d/: main.rs  โจทย์01d.md
exercises/ex01e/: main.rs  โจทย์01e.md
exercises/ex01ea/: main.rs  โจทย์01ea.md
exercises/ex01eb/: main.rs  โจทย์01eb.md
exercises/ex02/: main.rs  โจทย์02.md
exercises/ex02a/: main.rs  test.rs  โจทย์02a.md
exercises/ex02b/: main.rs  test.rs  โจทย์02b.md
exercises/ex02c/: main.rs  test.rs  โจทย์02c.md
exercises/ex03/: โจทย์03.md
exercises/ex03a/: main.rs  test.rs  โจทย์03a.md
exercises/ex04/: main.rs  โจทย์04.md
exercises/ex04a/: main.rs  test.rs  โจทย์03c.md  โจทย์04a.md
exercises/ex04b/: main.rs  test.rs  โจทย์04a.md
exercises/ex05a/: main.rs  test.rs  โจทย์05a.md
exercises/ex05b/: main.rs  test.rs  โจทย์05b.md
exercises/ex06a/: main.rs  test.rs  โจทย์06a.md
exercises/exE02/: main.rs  test.rs  โจทย์E02.md
exercises/exE03/: main.rs  โจทย์E03.md
exercises/exE04/: main.rs  test.rs  โจทย์E04.md
