[package]
name = "rust-for-odders"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ex01a"
path = "exercises/ex01a/main.rs"

[[bin]]
name = "ex01aa"
path = "exercises/ex01aa/main.rs"

[[bin]]
name = "ex01b"
path = "exercises/ex01b/main.rs"

[[bin]]
name = "ex01c"
path = "exercises/ex01c/main.rs"

[[bin]]
name = "ex01d"
path = "exercises/ex01d/main.rs"

[[bin]]
name = "ex02"
path = "exercises/ex02/main.rs"

[[bin]]
name = "ex03"
path = "exercises/ex03/main.rs"

[[bin]]
name = "ex04"
path = "exercises/ex04/main.rs"


[dependencies]


