[package]
name = "rust-for-odders"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ex01a"
path = "exercises/ex01a/main.rs"

[[bin]]
name = "ex01aa"
path = "exercises/ex01aa/main.rs"

[[bin]]
name = "ex01b"
path = "exercises/ex01b/main.rs"

[[bin]]
name = "ex01c"
path = "exercises/ex01c/main.rs"

[[bin]]
name = "ex01d"
path = "exercises/ex01d/main.rs"

[[bin]]
name = "ex01e"
path = "exercises/ex01e/main.rs"

[[bin]]
name = "ex01ea"
path = "exercises/ex01ea/main.rs"

[[bin]]
name = "ex01eb"
path = "exercises/ex01eb/main.rs"

[[bin]]
name = "ex02a"
path = "exercises/ex02a/main.rs"

[[bin]]
name = "ex02b"
path = "exercises/ex02b/main.rs"

[[bin]]
name = "ex02c"
path = "exercises/ex02c/main.rs"

[[bin]]
name = "ex03a"
path = "exercises/ex03a/main.rs"

[[bin]]
name = "ex04a"
path = "exercises/ex04a/main.rs"

[[bin]]
name = "ex05a"
path = "exercises/ex05a/main.rs"

[[bin]]
name = "ex05b"
path = "exercises/ex05b/main.rs"

[[bin]]
name = "exE02"
path = "exercises/exE02/main.rs"

[dependencies]


